[package]
name = "orgmode"
version = "0.1.0"
authors = ["Michael Spencer <sonrisesoftware@gmail.com>"]
license = "MIT"

[dependencies]
regex = "1.0.5"
lazy_static = "1.1.0"
petgraph = { version = "0.4.13", git = "https://@github.com/iBelieve/petgraph" }
chrono = "0.4.6"
failure = "0.1.3"
itertools = "0.7.8"
