[package]
name = "orgmode"
version = "0.1.0"
authors = ["Michael Spencer <sonrisesoftware@gmail.com>"]
license = "MIT"

[dependencies]
regex = "1.0.5"
lazy_static = "1.1.0"
chrono = { version = "0.4.6", features = ["serde"] }
failure = "0.1.3"
itertools = "0.7.8"
colored = "1.6.1"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
